unpackaged/main/default/objects/CommSubscription/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>FOR BACK in stock the following Additional fields are needed on this Table</description>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>