unpackaged/main/default/objects/CommSubscription/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>FOR BACK in stock the following Additional fields are needed on this Table</description>
    <label>Language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>