unpackaged/main/default/objects/CommSubscription/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>FOR BACK in stock the following Additional fields are needed on this Table</description>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>