unpackaged/main/default/objects/CommSubscription/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <description>FOR BACK in stock the following Additional fields are needed on this Table</description>
    <label>Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>