unpackaged/main/default/objects/CommSubscription/fields/SubscriptionDate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionDate__c</fullName>
    <description>To Track when the customer subscribe to this Special Subscription in this case SKU</description>
    <label>SubscriptionDate</label>
    <type>DateTime</type>
</CustomField>