unpackaged/main/default/objects/CommSubscription/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>FOR BACK in stock the following Additional fields are needed on this Table</description>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>